<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-70dp"
        tools:layout_editor_absoluteY="-105dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:text="@string/id" />

                <EditText
                    android:id="@+id/id"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/valider2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="afficher"
                    android:text="@string/valider"
                    android:visibility="visible"
                    tools:text="@string/valider" />

                <Button
                    android:id="@+id/quitter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="quitter"
                    android:text="@string/quitter" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>